# wipro-kalman-filter

./: README.md
.devcontainer/: devcontainer.json
kalmed_starter/: README.md  app.py  pyproject.toml  requirements.txt  run_demo.py  run_hr_rr_demo.py  run_hr_rr_realtime.py  run_realtime_demo.py  run_realtime_plot.py  run_rr_demo.py
kalmed_starter/kalmed.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
kalmed_starter/kalmed/data/: simulate.py  simulate_rr.py
kalmed_starter/kalmed/eval/: metrics.py  plots.py
kalmed_starter/kalmed/filters/: base.py  ekf.py
kalmed_starter/outputs/: live_2025-10-19_23-49-03.csv  live_2025-10-19_23-52-37.csv  live_2025-10-19_23-55-25.csv  live_2025-10-20_23-24-38.csv  live_2025-10-20_23-26-52_temp.csv  live_2025-10-20_23-27-30.csv  live_2025-10-20_23-32-24.csv  run_2025-10-19_23-49-03.csv  run_2025-10-19_23-49-03.xlsx  run_2025-10-19_23-52-37.csv  run_2025-10-19_23-52-37.xlsx  run_2025-10-19_23-55-25.csv  run_2025-10-19_23-55-25.xlsx  run_2025-10-20_23-24-38.csv
kalmed_starter/profiles/: Diego.json
kalmed_starter/tests/: test_simulate.py
